fix vert align

--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ header {
     margin: 5%;
     padding: 5px;
     text-align: left;
-    vertical-align: top;
+    /*vertical-align: top;*/
     font-size: 20px;
     
 }
